# safe-shell

./: .gitignore  CLAUDE.md  README.md
agent/: pyproject.toml  run.sh
agent/src/: __init__.py  agent.py  main.py
agent/src/tools/: __init__.py  bash.py
sandbox/: Cargo.toml
sandbox/lib/: Cargo.toml
sandbox/lib/src/: landlock_setup.rs  lib.rs  rlimits.rs  seccomp.rs
sandbox/src/: main.rs
tests/: abstract_socket_client.py  abstract_socket_server.py  beam_compat.erl  go_compat.go  luajit_compat.lua  nodejs_compat.js  perl_compat.pl  python_compat.py  ruby_compat.rb  syscall_probe.py  test_sandbox.py
vm/: create.sh  destroy.sh  safe-shell-vm.yaml
