[package]
name = "safe-shell"
version = "0.1.0"
edition = "2021"
description = "Landlock-sandboxed shell for safe LLM command execution"

[dependencies]
# Landlock bindings - safe Rust API for Linux Landlock LSM
landlock = "0.4"

# Low-level Unix/Linux syscalls and types
nix = { version = "0.29", features = ["process", "signal", "resource", "fs"] }

# For additional libc types if needed
libc = "0.2"

# Seccomp filtering
libseccomp = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# For testing
assert_cmd = "2.0"
predicates = "3.1"
